<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bank_logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/bank_logo" />

    <TextView
        android:id="@+id/bank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bank_logo"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/averia_serif_libre_light"
        android:text="@string/app_name"
        android:textColor="#FFC107"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/all_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/all_transactions"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#1273EC"
        android:fontFamily="@font/averia_serif_libre_light"
        android:onClick="showAllUsers"
        android:text="@string/all_users"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/all_transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FF5722"
        android:fontFamily="@font/averia_serif_libre_light"
        android:onClick="showAllTransactions"
        android:text="@string/all_transactions"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>